--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <header>
             <h1>Whole Mars Catalog</h1>
-            <h2>a new website to explore &mdash; coming soon</h2>
+            <h2>access to tools for the new world &mdash; coming soon</h2>
         </header>
     </body>
 </html>
